[gd_scene load_steps=30 format=3 uid="uid://d2t4aq1ch8cwm"]

[ext_resource type="Shader" path="res://assets/item_selected.gdshader" id="1_ry4s2"]
[ext_resource type="Theme" uid="uid://ctchcai8s7h1h" path="res://assets/main_theme.tres" id="2_6yuqo"]
[ext_resource type="Script" path="res://scenes/item_box.gd" id="2_dvoxn"]
[ext_resource type="Shader" path="res://assets/item_drag.gdshader" id="2_psocj"]
[ext_resource type="PackedScene" uid="uid://dap77le2cw3dm" path="res://scenes/items/mouse.tscn" id="3_cqdha"]
[ext_resource type="PackedScene" uid="uid://b2bs7joye1ykb" path="res://scenes/items/frog.tscn" id="5_um8gn"]
[ext_resource type="PackedScene" uid="uid://obd1fqgpemjw" path="res://scenes/items/bunny.tscn" id="6_1v7w1"]
[ext_resource type="FontFile" uid="uid://btcf0q04wohm5" path="res://assets/fonts/arkhip.regular.ttf" id="6_t8apl"]
[ext_resource type="PackedScene" uid="uid://ejc8w205et67" path="res://scenes/items/fox.tscn" id="7_18wgp"]
[ext_resource type="PackedScene" uid="uid://d3sqtxuwfbsqd" path="res://scenes/items/wolf.tscn" id="8_oyvg6"]
[ext_resource type="PackedScene" uid="uid://b8j4q4yl11y7u" path="res://scenes/items/bear.tscn" id="9_fkwfp"]
[ext_resource type="StyleBox" uid="uid://bkjn2d2l7wabl" path="res://assets/button_style.tres" id="11_qph5h"]
[ext_resource type="StyleBox" uid="uid://baurys0h778ko" path="res://assets/button_style_shadow.tres" id="12_ilrx5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5t87i"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e0r81"]
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_m4fru"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_144hc"]
resource_local_to_scene = true
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5d01j"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ywxk"]
resource_local_to_scene = true
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3adr"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nj5em"]
resource_local_to_scene = true
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6okns"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ax1gu"]
resource_local_to_scene = true
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rxvfq"]
shader = ExtResource("1_ry4s2")
shader_parameter/color = Color(1, 0.423529, 0, 0.156863)
shader_parameter/selected = false

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mky8k"]
resource_local_to_scene = true
shader = ExtResource("2_psocj")
shader_parameter/drag = false

[sub_resource type="InputEventKey" id="InputEventKey_jw511"]
device = -1
keycode = 82
unicode = 114

[sub_resource type="Shortcut" id="Shortcut_87nh3"]
events = [SubResource("InputEventKey_jw511")]

[sub_resource type="InputEventKey" id="InputEventKey_e00rl"]
device = -1
keycode = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_bu23h"]
events = [SubResource("InputEventKey_e00rl")]

[node name="ItemMenu" type="ColorRect"]
anchors_preset = -1
anchor_left = 0.65
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.6, 0.6, 0.6, 0.501961)

[node name="Items" type="Control" parent="."]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="ItemBox" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_5t87i")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.01
anchor_right = 0.49
anchor_bottom = 0.32
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_right = NodePath("../ItemBox2")
focus_neighbor_bottom = NodePath("../ItemBox3")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
text = "mouse"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox" instance=ExtResource("3_cqdha")]
material = SubResource("ShaderMaterial_e0r81")
offset_left = 51.136
offset_top = 50.168
offset_right = 115.136
offset_bottom = 114.168
scale = Vector2(0.7, 0.7)
mouse_filter = 1

[node name="ItemBox2" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_m4fru")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.01
anchor_right = 0.98
anchor_bottom = 0.32
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../ItemBox")
focus_neighbor_bottom = NodePath("../ItemBox4")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox2"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 24
text = "frog"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox2" instance=ExtResource("5_um8gn")]
material = SubResource("ShaderMaterial_144hc")
offset_left = 29.568
offset_top = 45.168
offset_right = 157.568
offset_bottom = 109.168
scale = Vector2(0.5, 0.5)
mouse_filter = 1

[node name="ItemBox3" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_5d01j")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.34
anchor_right = 0.49
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../ItemBox")
focus_neighbor_right = NodePath("../ItemBox4")
focus_neighbor_bottom = NodePath("../ItemBox5")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox3"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 24
text = "bunny"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox3" instance=ExtResource("6_1v7w1")]
material = SubResource("ShaderMaterial_2ywxk")
offset_left = 41.136
offset_top = 38.712
offset_right = 137.136
offset_bottom = 166.712
scale = Vector2(0.5, 0.5)
mouse_filter = 1

[node name="ItemBox4" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_c3adr")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.34
anchor_right = 0.98
anchor_bottom = 0.65
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../ItemBox3")
focus_neighbor_top = NodePath("../ItemBox2")
focus_neighbor_bottom = NodePath("../ItemBox6")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox4"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 24
text = "fox"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox4" instance=ExtResource("7_18wgp")]
material = SubResource("ShaderMaterial_nj5em")
offset_left = 37.568
offset_top = 39.712
offset_right = 133.568
offset_bottom = 135.712
scale = Vector2(0.6, 0.6)
mouse_filter = 1

[node name="ItemBox5" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_6okns")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.67
anchor_right = 0.49
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_top = NodePath("../ItemBox3")
focus_neighbor_right = NodePath("../ItemBox6")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox5"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 24
text = "wolf"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox5" instance=ExtResource("8_oyvg6")]
material = SubResource("ShaderMaterial_ax1gu")
offset_left = 41.136
offset_top = 36.256
offset_right = 137.136
offset_bottom = 164.256
scale = Vector2(0.5, 0.5)
mouse_filter = 1

[node name="ItemBox6" type="Panel" parent="Items"]
material = SubResource("ShaderMaterial_rxvfq")
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.67
anchor_right = 0.99
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("../ItemBox5")
focus_neighbor_top = NodePath("../ItemBox4")
focus_mode = 2
mouse_filter = 2
theme = ExtResource("2_6yuqo")
script = ExtResource("2_dvoxn")

[node name="Name" type="Label" parent="Items/ItemBox6"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.2
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 24
text = "bear"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item" parent="Items/ItemBox6" instance=ExtResource("9_fkwfp")]
material = SubResource("ShaderMaterial_mky8k")
offset_left = 32.568
offset_top = 39.256
offset_right = 160.568
offset_bottom = 167.256
scale = Vector2(0.5, 0.5)
mouse_filter = 1

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="RotateButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Press R to rotate selected animal"
focus_mode = 0
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 28
theme_override_styles/normal = ExtResource("11_qph5h")
theme_override_styles/hover = ExtResource("12_ilrx5")
theme_override_styles/pressed = ExtResource("12_ilrx5")
shortcut = SubResource("Shortcut_87nh3")
shortcut_in_tooltip = false
text = "rotate"

[node name="FlipButton" type="Button" parent="Buttons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
tooltip_text = "Press F to flip selected animal"
focus_mode = 0
theme_override_fonts/font = ExtResource("6_t8apl")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("11_qph5h")
theme_override_styles/hover = ExtResource("12_ilrx5")
theme_override_styles/pressed = ExtResource("12_ilrx5")
shortcut = SubResource("Shortcut_bu23h")
shortcut_in_tooltip = false
text = "flip"

[connection signal="focus_entered" from="Items/ItemBox" to="Items/ItemBox" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox" to="Items/ItemBox" method="_on_focus_exited"]
[connection signal="focus_entered" from="Items/ItemBox2" to="Items/ItemBox2" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox2" to="Items/ItemBox2" method="_on_focus_exited"]
[connection signal="focus_entered" from="Items/ItemBox3" to="Items/ItemBox3" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox3" to="Items/ItemBox3" method="_on_focus_exited"]
[connection signal="focus_entered" from="Items/ItemBox4" to="Items/ItemBox4" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox4" to="Items/ItemBox4" method="_on_focus_exited"]
[connection signal="focus_entered" from="Items/ItemBox5" to="Items/ItemBox5" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox5" to="Items/ItemBox5" method="_on_focus_exited"]
[connection signal="focus_entered" from="Items/ItemBox6" to="Items/ItemBox6" method="_on_focus_entered"]
[connection signal="focus_exited" from="Items/ItemBox6" to="Items/ItemBox6" method="_on_focus_exited"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox2" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox3" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox4" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox5" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/RotateButton" to="Items/ItemBox6" method="_on_rotate_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox" method="_on_flip_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox2" method="_on_flip_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox3" method="_on_flip_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox4" method="_on_flip_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox5" method="_on_flip_button_pressed"]
[connection signal="pressed" from="Buttons/FlipButton" to="Items/ItemBox6" method="_on_flip_button_pressed"]
